<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context="com.uniquindio.android.electiva.controlesbasicos.BotonesActivity">

    <Button
        android:id="@+id/id_btn_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:drawableLeft="@mipmap/ic_launcher"
        android:drawablePadding="5dp"
        android:text="@string/btn_normal" />

    <ToggleButton
        android:id="@+id/id_btn_toggle"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.06"
        android:textOff="@string/btn_toggleOff"
        android:textOn="@string/btn_toggleOn" />

    <ImageButton
        android:id="@+id/id_btn_image"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:layout_weight="0.05"
        android:background="#446789"
        android:contentDescription="@string/btn_Image"
        android:src="@mipmap/ic_launcher" />

    <Switch
        android:id="@+id/id_btn_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textOff="@string/btn_toggleOff"
        android:textOn="@string/btn_switchOn" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/id_btn_flotante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        app:backgroundTint="#ffffff"
        app:fabSize="normal"
        android:layout_gravity="center"/>
</LinearLayout>
